# crosswordpy

./: .gitignore  README.md  README.rst  pyproject.toml
crosswordpy/: __init__.py
src/crosswordpy/: __init__.py  game.py
tests/: test_crosswordpy.py
