[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Crossword"
homepage = "https://github.com/SaitoTsutomu/crosswordpy"
include = ["crosswordpy_data/*.txt"]
license = "PSFL"
name = "crosswordpy"
readme = "README.rst"
version = "0.1"

[tool.poetry.dependencies]
pygame = "^2.6"
python = "^3.12"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
pytest = "^8.3"

[tool.poetry.scripts]
crosswordpy = "crosswordpy:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
