[project]
authors = [
  {name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pygame>=2.6.1",
]
description = "No Hint Crossword Puzzle"
include = ["crosswordpy_data"]
name = "crosswordpy"
readme = "README.md"
requires-python = ">=3.11"
version = "0.2.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/crosswordpy"

[project.scripts]
crosswordpy = "crosswordpy:main"

[tool.uv]
dev-dependencies = []

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["CPY", "D203", "D213", "D400", "D415", "E501", "PLR2004", "S311"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
