[project]
authors = [
  {name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"},
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pygame>=2.6.1",
]
description = "No Hint Crossword Puzzle"
include = ["crosswordpy_data"]
name = "crosswordpy"
readme = "README.md"
requires-python = ">=3.11"
version = "0.2.1"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/crosswordpy"

[project.scripts]
crosswordpy = "crosswordpy:main"

[dependency-groups]
dev = []

[tool.taskipy.tasks]
pip-audit = "uv run -w pip-audit pip-audit"

[tool.uv]
exclude-newer = "3 days"

[[tool.uv.index]]
default = true
url = "https://pypi.flatt.tech/simple/"

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["CPY", "D203", "D213", "D400", "D415", "E501", "PLR2004", "S311"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12.0"]
